--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>tn.esprit</groupId>
     <artifactId>eventsProject</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>eventsProject</name>
     <description>eventsProject</description>
     <scm>
@@ -79,5 +79,12 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>admin</name>
+            <url>http://192.168.1.128:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
